# libcam_fltk

./: CMakeLists.txt  README.md  license.txt  package.sh
apps/: CMakeLists.txt  PCA9685_servo_driver.c  PCA9685_servo_driver.h  about.cpp  advanced.cpp  bcm283x_board_driver.c  bcm283x_board_driver.h  calc.cpp  calc.h  camThread.cpp  capture.cpp  capture.h  exportSettings.cpp  fltk_preview.cpp  fltk_preview.h  libcam_fltk.cpp  libcam_v.cpp  libcamera_control.cpp  mainwin.h  mylog.cpp  mylog.h  prefs.h  servoTab.cpp  servoThread.cpp  settings.cpp  settings.h  timeentry.cpp  timeentry.h  timelapse.cpp  xparentWidget.cpp  zoom.cpp  zoom.h
apps/FL_Flex/: FL_Flex.H  FL_Flex.cpp
apps/spdlog/: tweakme.h
core/: control.hpp  control_options.hpp  libcamera_app.cpp  libcamera_app.hpp  libcamera_encoder.hpp  video_options.hpp
image/: image.hpp  jpeg.cpp  png.cpp
install/: install.sh  libcam_fltk.desktop  libcam_fltk.sh
output/: CMakeLists.txt  buffer_output.cpp  buffer_output.hpp  control_output.cpp  control_output.hpp  output.cpp  output.hpp
preview/: egl_preview.cpp  preview.cpp  preview.hpp
